# Courseproject3_db

./: main.py  pyproject.toml
api/: config.py  hh_api.py
database/: db_manager.py  db_utils.py
