[tool.poetry]
name = "courseproject3-db"
version = "0.1.0"
description = ""
authors = ["EgorovNikolay <egorovnikolay14021994@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
psycopg2 = "^2.9.10"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"
isort = "^6.0.1"
black = "^25.1.0"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
